# gemini-module

./: .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  Dockerfile.redis5  Dockerfile.redis6  Dockerfile.redis7  README.md
.codex/gemini-bloom-audit/v6/: LOOP_CONTROL_BATCH.md  README.md
.codex/gemini-bloom-audit/v6/agents/: README.md
.codex/gemini-bloom-audit/v6/evidence/: README.md
.codex/gemini-bloom-audit/v6/policies/: 00_design_first_policy.md  01_rehydration_policy.md  02_subagent_protocol.md  03_evidence_policy.md  04_quality_gates.md  05_commit_push_policy.md  06_final_report_policy.md
.codex/gemini-bloom-audit/v6/prompts/: main_stage_execution_template.md  planner_subagent_prompt_template.md  reviewer_subagent_prompt_template.md
.codex/gemini-bloom-audit/v6/stages/: STAGE_00_DESIGN_CONTRACT.md  STAGE_01_ENV_REPO_BASELINE.md  STAGE_02_BUILD_EXISTING_TESTS.md  STAGE_03_STATIC_DEEP_AUDIT.md  STAGE_04_RUNTIME_COMMAND_SEMANTICS.md  STAGE_05_REDISBLOOM_COMPAT.md  STAGE_06_PERSISTENCE_TRANSPORT.md  STAGE_07_FUZZ_FAULT_SAFETY.md  STAGE_08_SANITIZER_MEMORY.md  STAGE_09_REPLICA_CLUSTER_OPS.md  STAGE_10_PERF_RESOURCE.md  STAGE_11_FINAL_REPORT_SYNTHESIS.md  STAGE_12_FINAL_REPORT_AUDIT.md
.codex/gemini-bloom-audit/v6/state/: LOOP_STATE.md
.codex/gemini-bloom-audit/v6/templates/: COMPATIBILITY_MATRIX_TEMPLATE.md  COVERAGE_MATRIX_TEMPLATE.md  FINAL_DOC_INDEX_TEMPLATE.md  FINDING_TEMPLATE.md  STAGE_RESULT_TEMPLATE.md
.github/workflows/: fuzz.yml  gemini-bloom-gate.yml  gemini-json-gate.yml  gemini-search-gate.yml
ci/: bloom_compat_test.py  bloom_migrate_test.py  bloom_soak_test.py  run_all_envs.sh  run_tests.sh
doc/: code_review.md  cross_platform_linking.md
doc/code_review/gemini-bloom/: README.md  gemini-bloom-03-feature-design.md  gemini-bloom-04-performance.md  gemini-bloom-05-directory-organization.md  gemini-bloom-07-test-coverage.md  review_result.md
doc/code_review/gemini-bloom-5.5Pro/: gemini_bloom_01_code_bugs.md  gemini_bloom_02_redis_bloom_compatibility.md  gemini_bloom_03_functional_design.md  gemini_bloom_04_performance.md  gemini_bloom_05_directory_organization.md  gemini_bloom_06_implementation_details.md  gemini_bloom_07_testing_coverage.md
doc/code_review/gemini-bloom/v1/: README.md  gemini-bloom-01-code-bugs.md  gemini-bloom-02-redisbloom-compatibility.md  gemini-bloom-06-implementation-details.md  review_result.md
doc/code_review/gemini-bloom/v2/: README.md  gemini_bloom_01_code_bugs.md  gemini_bloom_02_redis_bloom_compatibility.md  gemini_bloom_03_functional_design_issues.md  gemini_bloom_04_performance_issues.md  gemini_bloom_05_directory_organization_issues.md  gemini_bloom_06_implementation_details.md  gemini_bloom_07_test_coverage_gaps.md  gemini_bloom_review_index.md
doc/code_review/gemini-bloom/v3/: 00_scope_and_method.md  01_code_bugs.md  02_redis_bloom_compatibility.md  03_function_design.md  04_performance.md  05_directory_organization.md  06_implementation_details.md  07_tests_coverage.md  08_other_issues.md
doc/code_review/gemini-bloom/v4/: 00_scope_and_method.md  01_code_bugs.md  02_redis_bloom_compatibility.md  03_function_design.md  04_performance.md  05_directory_organization.md  06_implementation_details.md  07_tests_coverage.md  08_other_issues.md  README.md  V4-Answer.md
doc/code_review/gemini-bloom/v5/: 00_scope_and_method.md  01_function_correctness_gaps.md  02_redisbloom_interop_gaps.md  03_persistence_and_safety_gaps.md  README.md  (+19 more)
doc/design-review/gemini-bloom/: design_doc_review.md
doc/gemini-search/: development-plan-v2.md  development-plan.md
doc/tests/: gemini-module-tests-summary.md
include/: mock_redismodule_io.h
modules/gemini-bloom/: CMakeLists.txt  DESIGN.md
modules/gemini-bloom/fuzz/: bloom_fuzzer.cc
modules/gemini-bloom/fuzz/corpus/: basic
modules/gemini-bloom/src/: bloom_commands.cc  bloom_commands.h  bloom_config.cc  bloom_config.h  bloom_filter.cc  bloom_filter.h  bloom_rdb.cc  bloom_rdb.h  murmur2.cc  murmur2.h  redis_bloom_module.cc  rm_alloc.h  sb_chain.cc  sb_chain.h
modules/gemini-bloom/tests/: bloom_filter_test.cc  bloom_rdb_test.cc  sb_chain_test.cc
modules/gemini-bloom/tests/pict/: README.md  commands.pict  insert.pict  loadchunk.pict  module-args.pict  persistence.pict  protocol.pict  reserve.pict  run_pict_cases.py
modules/gemini-bloom/tests/tcl/: bloom_test.tcl
modules/gemini-json/: CMakeLists.txt
modules/gemini-json/fuzz/: json.dict  json_fuzzer.cc
modules/gemini-json/fuzz/corpus/: basic  document_path
modules/gemini-json/src/: json_commands.cc  json_commands.h  json_parse.cc  json_parse.h  json_path.cc  json_path.h  json_serialize.cc  json_serialize.h  json_type.cc  json_type.h  json_value.cc  json_value.h  redis_json_module.cc  rm_alloc.h
modules/gemini-json/tests/: json_asan_test.cc  json_parse_test.cc  json_path_test.cc  json_rdb_test.cc  json_value_test.cc
modules/gemini-json/tests/tcl/: json_test.tcl
modules/gemini-search/: CMakeLists.txt
modules/gemini-search/src/: document_store.cc  document_store.h  expr_engine.cc  expr_engine.h  geo_index.cc  geo_index.h  geoshape_index.cc  geoshape_index.h  hnsw_index.cc  hnsw_index.h  index_spec.cc  index_spec.h  numeric_index.cc  numeric_index.h  phonetic.cc  phonetic.h  query_parser.cc  query_parser.h  redis_search_module.cc  search_commands.cc  search_commands.h  search_rdb.cc  search_rdb.h  stemmer.cc  stemmer.h  suggest_dict.cc  suggest_dict.h  tag_index.cc  tag_index.h  tag_query.cc  tag_query.h  text_index.cc  text_index.h  vector_index.cc  vector_index.h
modules/gemini-search/tests/: document_store_test.cc  expr_engine_test.cc  geo_index_test.cc  geoshape_index_test.cc  hnsw_index_test.cc  index_spec_test.cc  numeric_index_test.cc  phonetic_test.cc  query_parser_test.cc  search_asan_test.cc  search_rdb_test.cc  suggest_dict_test.cc  tag_index_test.cc  text_index_test.cc  vector_index_test.cc
modules/gemini-search/tests/tcl/: search_test.tcl
src/: bloom_commands.cc  bloom_filter.cc  bloom_rdb.cc  sb_chain.cc  sb_chain.h
tools/pict/: bootstrap_pict.sh  run_gemini_bloom_pict.sh
(+283 files in other folders)
